# oxlint-plugins

./: .gitignore  .gitmodules  .npmrc  CREDITS.md  Cargo.toml  README.md  clippy.toml  deny.toml  flake.nix  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  status.json  tsconfig.json  vite.config.ts
crates/_carton/: Cargo.toml
crates/_carton/src/: arena.rs  hash.rs  lib.rs  profiler.rs
crates/angular_eslint/: Cargo.toml
crates/angular_eslint/src/: lib.rs  scanner.rs  tests.rs  types.rs
crates/e18e/: Cargo.toml
crates/e18e/src/: expressions.rs  helpers.rs  lib.rs  rules.rs  scanner.rs  statements.rs  tests.rs  types.rs
crates/e18e/src/helpers/: ast.rs  comparisons.rs  constants.rs  literals.rs  mod.rs
crates/e18e/src/rules/: array_some.rs  array_transforms.rs  comparisons.rs  date_regex.rs  dependencies.rs  includes_reduce.rs  inline_timer.rs  syntax.rs
crates/eslint_comments/: Cargo.toml
crates/eslint_comments/src/: directive.rs  disabled_area.rs  lib.rs  loc.rs  rule_disable_enable_pair.rs  rule_no_aggregating_enable.rs  rule_no_duplicate_disable.rs  rule_no_restricted_disable.rs  rule_no_unlimited_disable.rs  rule_no_unused_disable.rs  rule_no_unused_enable.rs  rule_no_use.rs  rule_require_description.rs
crates/eslint_comments/src/snapshots/: oxlint_plugins_eslint_comments__directive__tests__extracts_descriptions.snap  oxlint_plugins_eslint_comments__directive__tests__honors_line_and_block_restrictions.snap  oxlint_plugins_eslint_comments__directive__tests__parses_known_directive_kinds.snap  oxlint_plugins_eslint_comments__directive__tests__rejects_non_directives.snap  oxlint_plugins_eslint_comments__rule_disable_enable_pair__tests__reports_unpaired_disables.snap  oxlint_plugins_eslint_comments__rule_no_aggregating_enable__tests__reports_aggregating_enable.snap  oxlint_plugins_eslint_comments__rule_no_duplicate_disable__tests__reports_duplicate_disable.snap  oxlint_plugins_eslint_comments__rule_no_restricted_disable__tests__restricts_named_and_negated_patterns.snap  oxlint_plugins_eslint_comments__rule_no_unlimited_disable__tests__reports_unlimited_disables.snap  oxlint_plugins_eslint_comments__rule_no_unused_disable__tests__reports_disable_without_matching_problem.snap  (+3 more)
crates/eslint_json/: Cargo.toml
crates/eslint_json/src/: lib.rs
crates/eslint_markdown/: Cargo.toml
crates/eslint_markdown/src/: lib.rs
crates/functional/: Cargo.toml
crates/functional/src/: expressions.rs  helpers.rs  lib.rs  scanner.rs  statements.rs  tests.rs  types.rs
crates/mocha/: Cargo.toml
crates/mocha/src/: checks.rs  expressions.rs  helpers.rs  lib.rs  scanner.rs  statements.rs  tests.rs
crates/playground_wasm/: Cargo.toml
crates/playground_wasm/src/: lib.rs  plugins.rs
crates/playwright/: Cargo.toml
crates/playwright/src/: lib.rs  scanner.rs  tests.rs  types.rs
crates/postgresql/: Cargo.toml
crates/postgresql/src/: ast.rs  embedded_code.rs  eslint.rs  ffi.rs  lib.rs  manipulate.rs  parse.rs  rules.rs  text.rs  tokenize.rs
crates/react_refresh/: Cargo.toml
crates/react_refresh/src/: components.rs  exports.rs  helpers.rs  lib.rs  scanner.rs  tests.rs
crates/regexp/: Cargo.toml
crates/regexp/src/: checks.rs  expressions.rs  helpers.rs  lib.rs  pattern.rs  scanner.rs  tests.rs  traversal.rs  types.rs  usage.rs
crates/security/: Cargo.toml
crates/security/src/: analysis.rs  checks.rs  expressions.rs  helpers.rs  lib.rs  scanner.rs  statements.rs  tests.rs
crates/simple_import_sort/: Cargo.toml
crates/simple_import_sort/src/: items.rs  lib.rs  scanner.rs  shared.rs  specifiers.rs  tests.rs  types.rs
crates/sonarjs/: Cargo.toml
crates/sonarjs/src/: lib.rs  regex_ast.rs  rules.rs  scanner.rs  tests.rs  types.rs
crates/storybook/: Cargo.toml
crates/storybook/src/: helpers.rs  lib.rs  scanner.rs  tests.rs
crates/stylistic/: Cargo.toml
crates/stylistic/benches/: scan.rs
crates/stylistic/src/: lib.rs  native_stylistic.rs
crates/testing_library/: Cargo.toml
crates/testing_library/src/: checks.rs  helpers.rs  lib.rs  scanner.rs  tests.rs  types.rs
crates/unocss/: Cargo.toml
crates/unocss/src/: lib.rs  literals.rs  ordering.rs  scanner.rs  tags.rs  tests.rs  types.rs  visitor.rs
crates/unused_imports/: Cargo.toml
crates/unused_imports/src/: fixers.rs  lib.rs  scanner.rs  tests.rs  types.rs
examples/: README.md
npm/angular-eslint/: Cargo.toml  README.md  api.d.ts  api.js  index.js  package.json
npm/angular-eslint/src/: lib.rs
npm/angular-eslint/test/: api.test.mjs  plugin.test.mjs
npm/core/: Cargo.toml  LICENSE  README.md  index.js  package.json
npm/core/src/: cypress.rs  eslint_comments.rs  lib.rs  mocha.rs  no_forbidden_identifiers.rs  react_refresh.rs  security.rs  simple_import_sort.rs  stylistic.rs  unused_imports.rs
npm/cypress/: Cargo.toml  LICENSE  README.md  api.d.ts  api.js  index.js  package.json
npm/cypress/src/: lib.rs
npm/cypress/test/: api.test.mjs  plugin.test.mjs
npm/e18e/: Cargo.toml  README.md  api.d.ts  api.js  index.js  package.json
npm/e18e/src/: lib.rs
npm/e18e/test/: api.test.mjs  plugin.test.mjs
npm/eslint-comments/: Cargo.toml  LICENSE  README.md  api.d.ts  api.js  index.js  package.json
npm/eslint-comments/src/: lib.rs  no-unlimited-disable.js
npm/eslint-comments/test/: api.test.mjs  fix-replay.test.mjs  harness.mjs  lsp.test.mjs  no-unlimited-disable.parity.test.mjs  no-unused-disable.test.mjs  oxlint.test.mjs  plugin.test.mjs  upstream.test.mjs
npm/eslint-json/: Cargo.toml  README.md  api.d.ts  api.js  index.js  package.json
npm/eslint-json/src/: lib.rs
npm/eslint-json/test/: api.test.mjs  harness.mjs  parity.json  plugin.test.mjs  upstream.test.mjs
npm/functional/: Cargo.toml  LICENSE  README.md  api.d.ts  api.js  index.js  package.json
npm/functional/src/: lib.rs
npm/functional/test/: api.test.mjs  plugin.test.mjs  upstream.test.mjs
npm/no-forbidden-identifiers/: Cargo.toml  README.md  api.d.ts  api.js  index.js  package.json
npm/no-forbidden-identifiers/src/: lib.rs
npm/no-forbidden-identifiers/test/: api.test.mjs  rule.test.mjs
(+1078 files in other folders)
