[package]
name = "oxlint-plugins-angular-eslint"
description = "Rust core for the angular-eslint oxlint JavaScript plugin."
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxlint-plugins-carton.workspace = true
regex.workspace = true

[lints]
workspace = true
