[package]
name = "oxlint-plugins-functional"
description = "Rust core for the functional oxlint JavaScript plugin."
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxlint-plugins-carton.workspace = true

[dev-dependencies]
insta.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
