[package]
name = "oxlint-plugins-postgresql"
description = "Rust core for the eslint-plugin-postgresql oxlint plugin."
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxlint-plugins-carton.workspace = true
pg_query.workspace = true
phf.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
