[package]
name = "oxlint-plugins-postgresql"
description = "Rust core for the postgresql oxlint JavaScript plugin."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxc_span.workspace = true
oxlint-plugins-carton.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
