[package]
name = "oxlint-plugins-security"
description = "Rust core for the security oxlint JavaScript plugin."
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true
oxlint-plugins-carton.workspace = true

[dev-dependencies]
insta.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
