[package]
name = "oxlint-plugins-simple-import-sort"
description = "Rust core for the simple-import-sort oxlint JavaScript plugin."
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
oxlint-plugins-carton.workspace = true
regex.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
