[package]
name = "oxlint-plugins-storybook"
description = "Rust core for the Storybook oxlint JavaScript plugin."
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxlint-plugins-carton.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
