[package]
name = "oxlint-plugins-stylistic"
description = "Allocation-conscious stylistic rule logic for Rust-backed oxlint plugins."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
oxlint-plugins-carton.workspace = true
phf.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
divan.workspace = true
insta.workspace = true

[[bench]]
name = "scan"
harness = false

[lints]
workspace = true
