[package]
name = "oxlint-plugin-cypress"
description = "Rust-backed oxlint plugin port of eslint-plugin-cypress."
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "oxlint_plugin_cypress"

[dependencies]
napi.workspace = true
napi-derive.workspace = true
oxlint-plugins-carton.workspace = true
oxlint-plugins-cypress.workspace = true

[build-dependencies]
napi-build.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
