[package]
name = "oxlint-plugin-eslint-comments"
description = "Rust core for the eslint-comments oxlint JavaScript plugin."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "oxlint_plugin_eslint_comments"

[dependencies]
napi.workspace = true
napi-derive.workspace = true
oxlint-plugins-carton.workspace = true
oxlint-plugins-eslint-comments.workspace = true

[build-dependencies]
napi-build.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
