[package]
name = "oxlint-plugin-eslint-json"
description = "NAPI wrapper for the @eslint/json oxlint plugin."
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "oxlint_plugin_eslint_json"

[dependencies]
napi.workspace = true
napi-derive.workspace = true
oxlint-plugins-carton.workspace = true
oxlint-plugins-eslint-json.workspace = true

[build-dependencies]
napi-build.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
