[package]
name = "oxlint-plugin-no-forbidden-identifiers"
description = "Rust core for a sample oxlint JavaScript plugin."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "oxlint_plugin_no_forbidden_identifiers"

[dependencies]
napi.workspace = true
napi-derive.workspace = true
oxlint-plugins-carton.workspace = true
oxlint-plugins-stylistic.workspace = true

[build-dependencies]
napi-build.workspace = true

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_types = "warn"
todo = "deny"
unwrap_used = "deny"
